--- a/arch/arm/configs/addison_defconfig
+++ b/arch/arm/configs/addison_defconfig
@@ -94,7 +94,10 @@ CONFIG_HIGH_RES_TIMERS=y
 # CONFIG_VIRT_CPU_ACCOUNTING_GEN is not set
 CONFIG_IRQ_TIME_ACCOUNTING=y
 # CONFIG_BSD_PROCESS_ACCT is not set
-# CONFIG_TASKSTATS is not set
+CONFIG_TASKSTATS=y
+CONFIG_TASK_DELAY_ACCT=y
+CONFIG_TASK_XACCT=y
+CONFIG_TASK_IO_ACCOUNTING=y
 
 #
 # RCU Subsystem
@@ -125,7 +128,7 @@ CONFIG_CGROUPS=y
 # CONFIG_CGROUP_DEBUG is not set
 CONFIG_CGROUP_FREEZER=y
 # CONFIG_CGROUP_DEVICE is not set
-# CONFIG_CPUSETS is not set
+CONFIG_CPUSETS=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
 # CONFIG_MEMCG is not set
@@ -1351,7 +1354,7 @@ CONFIG_UID_STAT=y
 CONFIG_QSEECOM=y
 CONFIG_HDCP_QSEECOM=y
 # CONFIG_PROFILER is not set
-# CONFIG_UID_SYS_STATS is not set
+CONFIG_UID_SYS_STATS=y
 # CONFIG_USB_EXT_TYPE_C_PERICOM is not set
 # CONFIG_USB_EXT_TYPE_C_TI is not set
 # CONFIG_TI_DRV2667 is not set
